recap of creating a static file in express js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,33 +7,6 @@
     <link rel="stylesheet" href="../stylesheets/style.css">
 </head>
 <body>
-    <div class="nav__container">
-        <div class="logo">Monktail Solution</div>
-        <div class="menu">
-            <a href="about">About us</a>
-            <a href="#">Partners</a>
-            <a href="#">Services</a>
-        </div>
-        <div class="search">
-            <input type="search" name="" id="" placeholder="Search..." autocomplete="false">
-        </div>
-    </div>
-
-    <main class="container">
-        
-        <h1>Technology Age = <%= age %> </h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quam repellat alias dolor, praesentium
-            asperiores dolores voluptatem molestiae molestias enim ipsa! Officia nobis adipisci, sit quasi illo cumque
-            odio eos.
-        </p>
-        <button>More info...</button>
-        <div class="icons">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-youtube"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-instagram"></i>
-        </div>
-    </main>
-    <script src="../javascript/script.js"></script>
+    <div>Index Page</div>
 </body>
 </html>
